<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity" >

    
    
     <Button
        android:id="@+id/logoPhoto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:drawablePadding="5dp"
        android:drawableTop="@drawable/ic_logo"
        android:gravity="center_horizontal" />
    

	<LinearLayout android:id="@+id/registerFields"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/logoPhoto"
	    android:orientation="vertical"
	    >
	    
	    <EditText
	        android:id="@+id/userEmail"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="5dp"
	        android:ems="10"
	        android:hint="@string/userEmail"
	        android:inputType="textEmailAddress"
	        android:textColor="@color/grey"
	        android:textSize="20sp"
	        android:typeface="sans" >
	
	        <requestFocus />
	    </EditText>
	    
	     <EditText
	         android:id="@+id/userName"
	         android:layout_width="fill_parent"
	         android:layout_height="wrap_content"
	         android:layout_marginTop="5dp"
	         android:ems="10"
	         android:hint="@string/userName"
	         android:inputType="textEmailAddress"
	         android:textColor="@color/grey"
	         android:textSize="20sp"
	         android:typeface="sans" />
	     
	     <EditText
	         android:id="@+id/userPassword"
	         android:layout_width="fill_parent"
	         android:layout_height="wrap_content"
	         android:layout_marginTop="5dp"
	         android:ems="10"
	         android:hint="@string/userPassword"
	         android:inputType="textPassword"
	         android:textColor="@color/grey"
	         android:textSize="20sp"
	         android:typeface="sans" />
	    
	    <EditText
	        android:id="@+id/confirmUserPassword"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="5dp"
	        android:ems="10"
	        android:hint="@string/confirmUserPassword"
	        android:inputType="textPassword"
	        android:textColor="@color/grey"
	        android:textSize="20sp"
	        android:typeface="sans" />
    
    </LinearLayout>
    
	<TextView
	        android:id="@+id/register"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="20dp"
	        android:layout_below="@+id/registerFields"
	        android:layout_alignParentRight="true"
	        android:background="@null"
	        android:gravity="center"
	        android:text="@string/register"
	        android:textColor="#43C6DB"
	        android:textSize="20sp" />
    
</RelativeLayout>