<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".EditChecklistActivity" >

    <!-- ############################################### -->
    <!-- #EDIT CHECKLIST TEXT FIELD & CHECKLIST BUTTON # -->
    <!-- ############################################### -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" 
        android:layout_marginBottom="15dp">

        <EditText
            android:id="@+id/addChecklistText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="text"
            android:maxLength="140" >
            
        </EditText>

        <ImageButton
            android:id="@+id/addChecklistButton"
            android:layout_width="45dp"
            android:layout_height="36dp"
            android:layout_gravity="right"
            android:background="@null"
            android:contentDescription="@string/desc_plusButton"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_edit_done" />
    </LinearLayout>

    
    <!-- ########################################### -->
    <!-- ##############  CHECKLIST TYPE  ############### -->
    <!-- ########################################### -->
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
        <Space android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.67"
            />
        
        <Button
            android:id="@+id/checklistHighlighted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:drawableTop="@drawable/ic_create_checklist"
             android:drawablePadding="5dp"
            android:gravity="center"
            android:text="@string/create_checklist"
            android:textSize="13sp" 
            />
        
        <!-- Creating a spacer between buttons -->
        <Space android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            />

        <Button
            android:id="@+id/priorityChecklist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:background="@null"
            android:drawableTop="@drawable/ic_action_important"
            android:drawablePadding="5dp"
            android:text="@string/create_important"
            android:textSize="13sp" 
            />

    </LinearLayout>
    
   <!-- ############## EMPTY SPACER ############### -->

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <!-- ########################################### -->
    <!-- ##############  TASK INFO   ############### -->
    <!-- ########################################### -->

    <include
        android:id="@+id/taskinfo_grid"
        layout="@layout/incl_taskinfo_grid" />

    <!-- ############## EMPTY SPACER ############### -->

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" />
    
</LinearLayout>